--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My blog</title>
+    <link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    > <!--  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" -->
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root" class="jumbotron">
+      <h2 id="counter">0</h2>
+      <button id="inc" class="btn btn-primary btn-lg">INC</button>
+      <button id="dec" class="btn btn-primary btn-lg">DEC</button>
+      <button id="rnd" class="btn btn-primary btn-lg">RND</button>
+      <button id="clr" class="btn btn-primary btn-lg">CLR</button>
+      <button id="clr_rnd" class="btn btn-primary btn-lg">CLR RND</button>
+    </div>
   </body>
   
 </html>
